# artsanalyser

./: .gitignore  Artsdata.py  Databehandling.py  Figurer.py  Kart.py  Orginal.py  Tid.py  arter_i_polygoner.py  bruk denne kommandoen til å starte.md  claude.md  main.py  pyproject.toml
__marimo__/session/: Artsdata.py.json  Databehandling.py.json  Figurer.py.json  orginal.py.json
behandlede_data/: download.csv
inndata/: not NotRecovered, not Absent, not Blocked_Polygon.csv  test_input.csv
layouts/: Artsdata.grid.json
