[project]
name = "artsdatabanken"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.64.0",
    "duckdb>=1.3.2",
    "marimo>=0.14.17",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly[express]>=6.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "sqlglot>=27.7.0",
]
